examples/test/testpolicy6456.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6456
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key8: value42
      key22: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value49
          key49: value5
      podSelector:
        matchLabels:
          key26: value0
